objects/Cost_Center_Blackout_Peroid__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>What it Does? Stores blackout period end date
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDM_Unique_Id__c</fullName>
        <description>What it Does? Stores the external unique id from MDM
Downstream Impact? N/A 
Which department is owner? IT</description>
        <externalId>true</externalId>
        <label>MDM Unique Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(Start_Date__c),1, &apos;JAN&apos;,2,&apos;FEB&apos;,3,&apos;MAR&apos;,4,&apos;APR&apos;,5,&apos;MAY&apos;,6,&apos;JUN&apos;,7,&apos;JUL&apos;,8,&apos;AUG&apos;,9,&apos;SEP&apos;,10,&apos;OCT&apos;,11,&apos;NOV&apos;,12,&apos;DEC&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>What it Does? Stores blackout period start date
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Blackout Period</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>SFDC Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blackout Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>